# pico-mac-nano

./: 1mb_disc_firmware.uf2  CMakeLists.txt  MS BASIC 3.0 (disk 1).image  README.md  ROTATION_README.md  TFT_ROTATION_README.md  disc_1MB.img  disc_1MB.old.img  disc_uPicoMac1MB.img  disc_uPicoMac_1200KB.img  disc_uPicoMac_1280KB.img  firmware.uf2  mac_patched_rom_480x342_208KB.h  tft_2p_daxian.c  tft_2p_huadi.c
3D_model/: uPicoMac v18-button_fixed.stl  uPicoMac v19-front_extended_0.2mm_fixed.stl
3D_model/not_fixed/: uPicoMac v18-button.step  uPicoMac v18-front.step
3D_model/old/: uPicoMac v16 front_fixed.stl  uPicoMac v16 rear_fixed.stl  uPicoMac v18-front_fixed.stl
3D_model/uPicoMacTypeA_v5/: uPicoMacTypeA v5-button_fixed.stl  uPicoMacTypeA v5-front_fixed.stl  uPicoMacTypeA v5-rear_fixed.stl
3D_model/v3/: pmn_front_3_3.stl  pmn_front_3_3_fixed.stl  pmn_rear_3_3.stl  pmn_reset_3_2.stl  pmn_reset_3_2_fixed.stl
3D_model/v3.0/: pmn_front_3_0.stl  pmn_rear_3_0.stl
3D_model/v3.2/: pmn_rear_3_2.stl  pmn_switch_blank_3_2.stl
3D_model/v3/3d_mac/: pmn_rear_3_3_fixed_mixer_fixed.stl  pmn_switch_blank_3_2_fixed.stl
3D_models/: Macintosh with headers 1 reset.stl  Macintosh with headers front2.stl  Macintosh with headers rear2.stl
PCB/v3.0/: uPicomac-B_Cu.gbr  uPicomac-B_Mask.gbr  uPicomac-B_Paste.gbr  uPicomac-B_Silkscreen.gbr  uPicomac-Edge_Cuts.gbr  uPicomac-F_Cu.gbr  uPicomac-F_Fab.gbr  uPicomac-F_Mask.gbr  uPicomac-F_Paste.gbr  uPicomac-F_Silkscreen.gbr  uPicomac-NPTH.drl  uPicomac-PTH.drl  uPicomac-job.gbrjob  uPicomac-top-pos.csv  uPicomac_bom3_final.xlsx
PCB/v3.2/: KiCAD_uPicomac3_2-B_Courtyard.gbr  KiCAD_uPicomac3_2-B_Cu.gbr  KiCAD_uPicomac3_2-B_Fab.gbr  KiCAD_uPicomac3_2-B_Mask.gbr  KiCAD_uPicomac3_2-B_Paste.gbr  KiCAD_uPicomac3_2-B_Silkscreen.gbr  KiCAD_uPicomac3_2-Edge_Cuts.gbr  KiCAD_uPicomac3_2-F_Courtyard.gbr  KiCAD_uPicomac3_2-F_Cu.gbr  KiCAD_uPicomac3_2-F_Fab.gbr  KiCAD_uPicomac3_2-F_Mask.gbr  KiCAD_uPicomac3_2-F_Paste.gbr  KiCAD_uPicomac3_2-F_Silkscreen.gbr  KiCAD_uPicomac3_2-Margin.gbr  KiCAD_uPicomac3_2-NPTH.drl  KiCAD_uPicomac3_2-PTH.drl  KiCAD_uPicomac3_2-job.gbrjob  pmn_v3_2_bom.csv  pmn_v3_2_position.csv  uPicomac.kicad_pcb  uPicomac.kicad_prl  uPicomac.kicad_pro
Screen-HD20034C40/: HSD2.0+7701S CODE-MIPI.txt  HSD2.0-ST7701S RGB.TXT
data_sheets/D200C2409V0 480640 SPEC/: 2.0VGA LCD init.txt  FT6336.c  FT6336.h
firmware/: firmware.uf2  firmware_1280KB.uf2  firmware_3_2.uf2  pico-umac-208k-sd-vga.uf2  picomac-0.2-2040-sd-umac-rom.h  picomac-0.2-2040-sd.uf2
incbin/: umac-disc-MSBasic.h  umac-rom-old.h  umac-rom-old2.h  umac-rom.h
include/: audio.h  font.h  font_test.h  hw.h  kbd.h  tft_2p.h  tusb_config.h  video.h  ws2812.h
scripts/: Microsoft BASIC Compiler.img  extract_disc_image.sh  extract_disc_image_corrected.sh  extract_disc_image_final.sh  extract_disc_image_precise.sh  extract_disc_image_v2.sh  extract_rom.py  extract_rom.sh  extract_rom_simple.sh
src/: audio.c  audio.pio  font.c  font_test.c  hid.c  main.c  tft_2p.c  video.c  ws2812.c
